# physik690-Bachelorarbeit

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  TODO.txt  analysis.ipynb  bachelor.service  cloud-config.database.yaml  cloud-config.yaml  config.toml  meson.build
include/: algorithm.hpp  algorithms.hpp  config.hpp  lattice.hpp  metropolis.hpp  utils.hpp  wolff.hpp
include/algorithms/: algorithms.hpp  metropolis.hpp  wolff.hpp
include/analysis/: autocorrelation.hpp  boostrap.hpp
include/observables/: type.hpp
include/schemas/: measurements_generated.h  serialize.hpp  spins_generated.h  vector_generated.h
include/storage/: chunk.hpp  estimate.hpp  migrations.hpp  next_derivative.hpp  postgres_storage.hpp  sqlite.hpp  sqlite_storage.hpp  storage.hpp
include/tasks/: bootstrap.hpp  derivatives.hpp  simulate_size_task.hpp  simulation.hpp  task.hpp  vortices.hpp
include/utils/: ratio.hpp  task_distributor.hpp  utils.hpp
report/: main.tex  refs.bib
report/chapters/appendix/: config.tex  observables.tex  schema.tex  source_code.tex  vortices.tex
report/chapters/conclusion/: conclusion.tex
report/chapters/implementation/: computing.tex  general.tex  optimizations.tex  overall.tex  procedure.tex  scanning.tex  tasks.tex
report/chapters/introduction/: introduction.tex
report/chapters/results/: energy.tex  magnetization.tex  results.tex  scaling.tex  vortex.tex
report/chapters/theory/: numerical_methods.tex  phase_transitions.tex  xy_model.tex
schemas/: generate.sh  measurements.fbs  spins.fbs  vector.fbs
schemas/python/schemas/: Vector.py
src/: algorithms.cpp  config.cpp  lattice.cpp  main.cpp  metropolis.cpp  utils.cpp  wolff.cpp
src/algorithms/: algorithms.cpp  metropolis.cpp  wolff.cpp
src/analysis/: autocorrelation.cpp  bootstrap.cpp
src/observables/: type.cpp
src/schemas/: serialize.cpp
src/storage/: migrations.cpp  postgres_storage.cpp  sqlite.cpp  sqlite_storage.cpp
src/utils/: ratio.cpp  utils.cpp
